<resources>
    <string name="app_name">Iett</string>
    <string name="alertTitle">İnternet Bağlantınız Yok</string>
    <string name="alertMessage">Uygulamayı kullanmak için internete bağlanın.</string>
    <string name="alertNegativeButon">Kapat</string>
    <string name="alertPozitiveButon">İnterneti Aç</string>
    <string name="alertCikisTitle">Çıkış Yap?</string>
    <string name="alertCikisMessage">Uygulamadan Çıkış Yapılsın Mı?</string>
    <string name="alertCikisNegativeButon">Çıkış</string>
    <string name="alertCikisPozitifButon">İptal</string>
    <string name="prefTimerInterval">1000</string>
    <string name="prefTimerMillisInFuture">3000</string>
    <string name="sifre">Şifre</string>
    <string name="sifremiUnuttum">Şifremi Unuttum</string>
    <string name="beniHatirla">Beni Hatırla</string>
    <string name="girisYap">GİRİŞ YAP</string>
    <string name="cikisYap">ÇIKIŞ YAP</string>
    <string name="hesapYok">Hesabın Yok Mu?</string>
    <string name="kayitOl">KAYIT OL</string>
    <string name="sicilNo">Sicil No.</string>
    <string name="email">E-mail</string>
    <string name="sifreGonder">ŞİFRE GÖNDER</string>
    <string name="sifreTekrar">Şifre(Tekrar)</string>
    <string name="sifreDegistir">ŞİFRE DEĞİŞTİR</string>
    <string name="ad">Ad</string>
    <string name="soyad">Soyad</string>
    <string name="hesapVar">Zaten Hesabın Var Mı?</string>
    <string name="sicil">SİCİL</string>
    <string name="cezalarim">CEZALARIM</string>
    <string name="kazalarim">KAZALARIM</string>
    <string name="uyariVeKararlarim">UYARI VE KARARLARIM</string>
    <string name="icon">ICON</string>
    <string name="talepVeOneri">TALEP VE ÖNERİ</string>
    <string name="talepEkle">TALEP EKLE</string>
    <string name="taleplerim">TALEPLERİM</string>
    <string name="oneriEkle">ÖNERİ EKLE</string>
    <string name="onerilerim">ÖNERİLERİM</string>
    <string name="talepler">TALEPLER</string>
    <string name="yeniTalep">YENİ TALEP</string>
    <string name="oneriler">ÖNERİLER</string>
    <string name="yeniOneri">YENİ ÖNERİ</string>
    <string name="sicilButon">SİCİL</string>
    <string name="adButon">AD</string>
    <string name="soyadButon">SOYAD</string>
    <string name="baslikButon">BAŞLIK</string>
    <string name="aciklamaButon">AÇIKLAMA</string>
    <string name="talepBaslikTools">TALEP BAŞLIĞINI GİRİNİZ</string>
    <string name="talepAciklamaTools">TALEP AÇIKLAMASINI GİRİNİZ</string>
    <string name="gonder">GÖNDER</string>
    <string name="talepDetay">TALEP DETAY</string>
    <string name="tarihButon">TARİH</string>
    <string name="cevapButon">CEVAP</string>
    <string name="talepButon">TALEP</string>
    <string name="oneriBaslikTools">ÖNERİ BAŞLIĞINI GİRİNİZ</string>
    <string name="oneriAciklamaTools">ÖNERİ AÇIKLAMASINI GİRİNİZ</string>
    <string name="oneriDetay">ÖNERİ DETAY</string>
    <string name="oneri">ÖNERİ</string>
    <string name="hatArama">HAT ARAMA</string>
    <string name="hatKod">Hat Kodunu Giriniz</string>
    <string name="isListesi">İŞ LİSTESİ</string>
    <string name="isSorgula">İŞ SORGULA</string>
    <string name="saatButon">SAAT</string>
    <string name="gorevYeriButon">GÖREV YERİ</string>
    <string name="fiiliGoreviButon">FİİLİ GÖREVİ</string>
    <string name="isSorgulaTarihTools">Arama Yapılacak İş Tarihini Seçiniz</string>
    <string name="izinSorgula">İZİN SORGULA</string>
    <string name="izinSorgulaTarihTools">Arama Yapılacak İzin Tarihini Seçiniz</string>
    <string name="toastKayitBasarili">Kayıt Başarılı</string>
    <string name="toastKayitBasarisiz">Kayıt Başarısız</string>
    <string name="toastBosAlan">Boş Alanları Doldurunuz</string>
    <string name="toastZorunluBosAlan">Zorunlu Alanları Doldurunuz</string>
    <string name="toastGirisBasarili">Giriş Başarılı</string>
    <string name="toastGirisBasarisiz">Giriş Başarısız</string>
    <string name="toastSifreKarakter">Şifre En Az 6 Karakter Olmalıdır.</string>
    <string name="toastSifre">Şifrenizde En Az 1 Büyük Harf, 1 Küçük Harf Ve 1 Rakam Bulunmalıdır.</string>
    <string name="toastSifreSayi">Şifrenizde En Az Bir Sayı Bulunmalıdır.</string>
    <string name="toastEmailFormat">E-mail Formatı Yanlış.</string>
    <string name="toastSifreUyusmuyor">Şifreler Uyuşmuyor.</string>
    <string name="toastSifreGondermeBasarili">Yeni Parola İçin Gerekli Bağlantı Adresinize Gönderildi!</string>
    <string name="toastSifreGondermeBasarisiz">Yeni Parola İçin Gerekli Bağlantı Adresinize Gönderilemedi!</string>
    <string name="oturumKapatiliyor">Oturum Kapatılıyor.</string>
    <string name="toastEmailBulunamadi">Kayıtlı E-mail Bulunamadı.</string>
    <string name="toastEmailBulundu">Bu E-mail Adresi Kullanılmakta.</string>
    <string name="profil">PROFİL</string>
    <string name="profilAd">AD</string>
    <string name="profilSoyad">SOYAD</string>
    <string name="profilSicil">SİCİL</string>
    <string name="profilEmail">E-MAIL</string>
    <string name="profilResimSeciniz">SEÇİNİZ</string>
    <string name="profilDogumTarihi">01.01.01</string>
    <string name="profilKanGrubu">KAN GRUBU GİRİNİZ</string>
    <string name="profilDogumTarihiSec">DOĞUM TARİHİ SEÇİNİZ</string>
    <string name="profileGit">PROFİLE GİT</string>
    <string name="anaSayfaHosgeldiniz">HOŞGELDİNİZ</string>
    <string name="anaSayfaAdSoyad">AD SOYAD</string>
    <string name="bordroButon">BORDRO</string>
    <string name="isListesiButon">İŞ LİSTESİ</string>
    <string name="izinlerButon">İZİNLERİM</string>
    <string name="arizaOlusturButon">ARIZA OLUŞTUR</string>
    <string name="arizalarimButon">ARIZALARIM</string>
    <string name="talepVeOneriButon">TALEP VE ÖNERİ</string>
    <string name="kutuphaneButon">KÜTÜPHANE</string>
    <string name="hatSorgulaButon">HAT SORGULA</string>
    <string name="izinOnayButon">İZİN ONAYLAMA</string>
    <string name="raporOnayButon">TUTANAK ONAYLAMA</string>
    <string name="arizaOnayButon">ARIZA ONAYLAMA</string>
    <string name="raporOlusturButon">TUTANAK OLUŞTUR</string>
    <string name="talepListeleButon">TALEP LİSTELE</string>
    <string name="oneriListeleButon">ÖNERİ LİSTELE</string>
    <string name="talepOnaylaButon">TALEP ONAYLA</string>
    <string name="oneriOnaylaButon">ÖNERİ ONAYLA</string>
    <string name="isOlusturButon">İŞ OLUŞTUR</string>
    <string name="raporlarButon">TUTANAKLAR</string>
    <string name="raporDuzenleButon">Tutanak Düzenle</string>
    <string name="toastSifreGuncellemeBasarili">ŞİFRE GÜNCELLEME BAŞARILI</string>
    <string name="toastSifreGuncellemeBasarisiz">ŞİFRE GÜNCELLEME BAŞARISIZ</string>
    <string name="toastEskiSifeIleAyni">Yeni Şifreniz Eski Şifreniz İle Aynı Olamaz</string>
    <string name="anasayfayaGit">ANASAYFAYA GİT</string>
    <string name="degisiklikleriKaydet">DEĞİŞİKLİKLERİ KAYDET</string>
    <string name="toastProfilGuncellemeBasarili">PROFİL GÜNCELLEME BAŞARILI</string>
    <string name="toastProfilGuncellemeBasarisiz">PROFİL GÜNCELLEME BAŞARISIZ</string>
    <string name="toastSiciliniziDegistiremezsiniz">SİCİLİNİZİ DEĞİŞTİREMEZSİNİZ</string>
    <string name="toastEmailGuncellemeBasarili">E-MAIL GÜNCELLEME BAŞARILI</string>
    <string name="toastEmailGuncellemeBasarisiz">E-MAIL GÜNCELLEME BAŞARISIZ</string>
    <string name="toastDegisiklikYapilmadi">DEĞİŞİKLİK YAPILMADI</string>
    <string name="kanGrubuSeciniz">KAN GRUBU SEÇİNİZ</string>
    <string name="kanGrubuABRhPozitif">AB Rh+</string>
    <string name="kanGrubuABRhNegatif">AB Rh-</string>
    <string name="kanGrubuARhPozitif">A Rh+</string>
    <string name="kanGrubuARhNegatif">A Rh-</string>
    <string name="kanGrubuBRhPozitif">B Rh+</string>
    <string name="kanGrubuBRhNegatif">B Rh-</string>
    <string name="kanGrubu0RhPozitif">0 Rh+</string>
    <string name="kanGrubu0RhNegatif">0 Rh-</string>
    <string name="toastResimSecimiGerceklesemedi">RESİM SEÇİMİ GERÇEKLEŞEMEDİ</string>
    <string name="toastResimYuklemeBasarili">RESİM YÜKLEME İŞLEMİ BAŞARILI</string>
    <string name="toastResimYukleniyor">RESİM YÜKLENİYOR</string>
    <string name="toastResimYuklemeGerceklesemedi">RESİM YÜKLEME İŞLEMİ GERÇEKLEŞEMEDİ</string>
    <string name="arizaOlusturHatKodunuSeciniz">Hat Kodunu Giriniz</string>
    <string name="arizaOlusturHatIstikametiniSeciniz">Hat İstikameti Giriniz</string>
    <string name="arizaOlusturArizaBasligiGiriniz">Arıza Başlığı Giriniz</string>
    <string name="arizaOlusturArizaAciklamasiGiriniz">Arıza Açıklaması Giriniz</string>
    <string name="toastArizaOlusturmaBasarili">ARIZA OLUŞTURMA BAŞARILI</string>
    <string name="toastArizaOlusturmaBasarisiz">ARIZA OLUŞTURMA BAŞARISIZ</string>
    <string name="toastHatKodunaSahipAracBulunamadi">HAT KODUNA SAHİP ARAÇ BULUNAMADI</string>
    <string name="toolsArizaBaslikLastikPatlamasi">LASTİK PATLAMASI</string>
    <string name="arizaDetay">ARIZA DETAY</string>
    <string name="adSoyad">AD SOYAD</string>
    <string name="arizaBaslik">ARIZA BAŞLIK</string>
    <string name="arizaAciklama">ARIZA AÇIKLAMA</string>
    <string name="arizaTarih">ARIZA TARİH</string>
    <string name="arizaHatIstikamet">HAT İSTİKAMET</string>
    <string name="arizaHatKodu">HAT KODU</string>
    <string name="arizaDurumu">ARIZA DURUMU</string>
    <string name="arizaSonlandir">ARIZA SONLANDIR</string>
    <string name="arizaIslemeAl">ARIZA İŞLEME AL</string>
    <string name="toastTalepOlusturmaBasarili">TALEP OLUŞTURMA BAŞARILI</string>
    <string name="toastTalepOlusturmaBasarisiz">TALEP OLUŞTURMA BAŞARISIZ</string>
    <string name="talepDurumu">DURUMU</string>
    <string name="talepRed">TALEP RED</string>
    <string name="talepOnay">TALEP ONAY</string>
    <string name="toastOneriOlusturmaBasarili">ÖNERİ OLUŞTURMA BAŞARILI</string>
    <string name="toastOneriOlusturmaBasarisiz">ÖNERİ OLUŞTURMA BAŞARISIZ</string>
    <string name="oneriDurumu">DURUMU</string>
    <string name="oneriRed">ÖNERİ RED</string>
    <string name="oneriOnay">ÖNERİ ONAY</string>
    <string name="toastKullaniciDurumuPasif">KULLANICI DURUMUNU AKTİFLEŞTİRİNİZ</string>
    <string name="bolge">BÖLGE - HAT KOD</string>
    <string name="vardiya">VARDİYA</string>
    <string name="olustur">OLUŞTUR</string>
    <string name="isTarihiSec">İŞ TARİHİ SEÇİNİZ</string>
    <string name="isBaslangicSaat">İŞ BAŞLANGIÇ SAATİ</string>
    <string name="isBitisSaat">İŞ BİTİŞ SAATİ</string>
    <string name="isDuzenle">İŞ DÜZENLE</string>
    <string name="isListeIslemleri">İŞ LİSTE İŞLEMLERİ</string>
    <string name="izinOlustur">İZİN OLUŞTUR</string>
    <string name="izinDuzenle">İZİN DÜZENLE</string>
    <string name="izinTurUcretsiz">ÜCRETSİZ İZİN</string>
    <string name="izinTurUcretli">ÜCRETLİ İZİN</string>
    <string name="izinTurHafta">HAFTA TATİL İZNİ</string>
    <string name="izinTurHastalik">HASTALIK İZNİ</string>
    <string name="izinTurSosyal">SOSYAL İZİN</string>
    <string name="izinTurZorunlu">ZORUNLU İZİN</string>
    <string name="izinTurYillik">YILLIK İZİN</string>
    <string name="izinSil">İZİN SİL</string>
    <string name="isSil">İŞ SİL</string>
    <string name="izinIslemleri">İZİN İŞLEMLERİ</string>
    <string name="bordroTur1">İşçi - İşçi Maaş Bordrosu</string>
    <string name="bordroTur2">İşçi - İşveren İkramiye Bordrosu</string>
    <string name="bordroTur3">İşçi - Devlet İkramiye Bordrosu</string>
    <string name="bordroTur4">İşçi - Kıdemli İşçiliğe Teşvik Bordrosu</string>
    <string name="bordroTur5">İşçi - Ödül İkramiye Bordrosu</string>
    <string name="bordroTur6">İşçi - Yazlık Giyim Bordrosu</string>
    <string name="bordroTur7">İşçi - Kışlık Giyim Bordrosu</string>
    <string name="bordroTur8">İşçi - Promosyon Ödemesi</string>
    <string name="bordroTur9">İşçi - Tahsil Yardımı</string>
    <string name="bordroTur10">İşçi - Avans Bordrosu</string>
    <string name="bordroTur11">İşçi - Ek Maaş Bordrosu</string>
    <string name="bordroTur12">İsfalt Bordrosu</string>
</resources>