<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.IzinIslemleriActivity">


    <Button
        android:id="@+id/btnIzinOlusturVeyaDuzenle"
        android:layout_width="@dimen/txtBuyukWidthBoyut"
        android:layout_height="@dimen/txtHeightBoyut"
        android:background="@color/logoRengi"
        android:gravity="center"
        android:text="@string/izinIslemleri"
        android:textColor="@color/formRengi"
        android:textSize="@dimen/formYaziBoyut"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIzinOlusturVeyaDuzenleLeftIcon"
        android:layout_width="@dimen/iconBoyut"
        android:layout_height="@dimen/txtHeightBoyut"
        android:background="@color/logoRengi"
        android:drawableLeft="@drawable/left"
        android:paddingLeft="5dp"
        android:textColor="@color/formRengi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/icon" />

    <Button
        android:id="@+id/btnIzinOlusturma"
        android:layout_width="0dp"
        android:layout_height="@dimen/txtHeightBoyut"
        android:background="@color/formRengi"
        android:gravity="center|left"
        android:paddingLeft="19dp"
        android:text="@string/izinOlustur"
        android:textColor="@color/logoRengi"
        android:textSize="@dimen/formYaziKucukBoyut"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIzinOlusturVeyaDuzenle" />

    <Button
        android:id="@+id/btnIzinSorgulama"
        android:layout_width="0dp"
        android:layout_height="@dimen/txtHeightBoyut"
        android:background="@color/formRengi"
        android:gravity="center|left"
        android:paddingLeft="19dp"
        android:text="@string/izinSorgula"
        android:textColor="@color/logoRengi"
        android:textSize="@dimen/formYaziKucukBoyut"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIzinOlusturma" />

    <Button
        android:id="@+id/btnIzinDuzenleme"
        android:layout_width="0dp"
        android:layout_height="@dimen/txtHeightBoyut"
        android:background="@color/formRengi"
        android:gravity="center|left"
        android:paddingLeft="19dp"
        android:text="@string/izinDuzenle"
        android:textColor="@color/logoRengi"
        android:textSize="@dimen/formYaziKucukBoyut"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIzinSorgulama" />

    <Button
        android:id="@+id/btnIzinSilme"
        android:layout_width="0dp"
        android:layout_height="@dimen/txtHeightBoyut"
        android:background="@color/formRengi"
        android:gravity="center|left"
        android:paddingLeft="19dp"
        android:text="@string/izinSil"
        android:textColor="@color/logoRengi"
        android:textSize="@dimen/formYaziKucukBoyut"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIzinDuzenleme" />

</androidx.constraintlayout.widget.ConstraintLayout>