<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/isOlusturLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.IsOlusturActivity">

    <EditText
        android:id="@+id/txtIsOlusturSicil"
        android:layout_width="0dp"
        android:layout_height="@dimen/txtHeightBoyut"
        android:background="@drawable/kan_grubu_btn_design"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/sicilButon"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/arizaOlusturTextPaddingLeft"
        android:textColor="@color/yaziRengi"
        android:textSize="@dimen/formYaziOrtaBoyut"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIsOlusturBaslik" />

    <EditText
        android:id="@+id/txtIsOlusturBolge"
        android:layout_width="0dp"
        android:layout_height="@dimen/txtHeightBoyut"
        android:background="@drawable/kan_grubu_btn_design"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/bolge"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/arizaOlusturTextPaddingLeft"
        android:textColor="@color/yaziRengi"
        android:textSize="@dimen/formYaziBoyut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIsOlusturSicil" />

    <Button
        android:id="@+id/btnIsOlusturTarih"
        android:layout_width="0dp"
        android:layout_height="@dimen/txtHeightBoyut"
        android:background="@drawable/kan_grubu_btn_design"
        android:ems="10"
        android:gravity="center|left"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/arizaOlusturTextPaddingLeft"
        android:text="@string/isTarihiSec"
        android:textColor="@color/yaziRengi"
        android:textSize="@dimen/formYaziBoyut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIsOlusturBolge" />

    <EditText
        android:id="@+id/txtIsOlusturSaatBaslangici"
        android:layout_width="0dp"
        android:layout_height="@dimen/txtHeightBoyut"
        android:background="@drawable/kan_grubu_btn_design"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/isBaslangicSaat"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/arizaOlusturTextPaddingLeft"
        android:textColor="@color/yaziRengi"
        android:textSize="@dimen/formYaziBoyut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIsOlusturTarih" />

    <EditText
        android:id="@+id/txtIsOlusturSaatBitisi"
        android:layout_width="0dp"
        android:layout_height="@dimen/txtHeightBoyut"
        android:background="@drawable/kan_grubu_btn_design"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/isBitisSaat"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/arizaOlusturTextPaddingLeft"
        android:textColor="@color/yaziRengi"
        android:textSize="@dimen/formYaziBoyut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIsOlusturSaatBaslangici" />

    <Button
        android:id="@+id/btnIsOlusturBaslik"
        android:layout_width="@dimen/butonBoyut"
        android:layout_height="@dimen/txtHeightBoyut"
        android:background="@color/logoRengi"
        android:paddingRight="@dimen/btnProfilBaslikPaddingRight"
        android:text="@string/isOlusturButon"
        android:textColor="@color/formRengi"
        android:textSize="@dimen/formYaziBoyut"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnIsOlusturBaslikIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIsOlusturBaslikIcon"
        android:layout_width="@dimen/iconBoyut"
        android:layout_height="@dimen/txtHeightBoyut"
        android:background="@color/logoRengi"
        android:drawableLeft="@drawable/left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIsOlustur"
        android:layout_width="0dp"
        android:layout_height="@dimen/txtHeightBoyut"
        android:background="@color/logoRengi"
        android:text="@string/olustur"
        android:textColor="@color/formRengi"
        android:textSize="@dimen/formYaziBoyut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>